# learning_machine

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: celery.py  settings.py  urls.py
htmlcov/: class_index.html  function_index.html  index.html  manage_py.html  status.json  z_1df033120bbcc412___init___py.html  z_1df033120bbcc412_create_groups_py.html  z_1df033120bbcc412_csu_py.html  z_1ea838694151cac8___init___py.html  z_1ea838694151cac8_asgi_py.html  z_1ea838694151cac8_settings_py.html  z_1ea838694151cac8_urls_py.html  z_1ea838694151cac8_wsgi_py.html  z_300a7f43993f905c_0001_initial_py.html  z_300a7f43993f905c_0002_course_owner_lesson_owner_py.html  z_300a7f43993f905c___init___py.html  z_8b562f3fe71efc7d___init___py.html  z_e7c45762ecaa8ffb___init___py.html  z_e7c45762ecaa8ffb_admin_py.html  z_e7c45762ecaa8ffb_apps_py.html  z_e7c45762ecaa8ffb_models_py.html  z_e7c45762ecaa8ffb_paginators_py.html  z_e7c45762ecaa8ffb_serializers_py.html  z_e7c45762ecaa8ffb_tests_py.html  z_e7c45762ecaa8ffb_urls_py.html  z_e7c45762ecaa8ffb_validators_py.html  z_e7c45762ecaa8ffb_views_py.html  z_f6c68bdc9becfc1e___init___py.html  z_f6c68bdc9becfc1e_admin_py.html  z_f6c68bdc9becfc1e_apps_py.html  z_f6c68bdc9becfc1e_models_py.html  z_f6c68bdc9becfc1e_permissions_py.html  z_f6c68bdc9becfc1e_serializers_py.html  z_f6c68bdc9becfc1e_tests_py.html  z_f6c68bdc9becfc1e_urls_py.html  z_f6c68bdc9becfc1e_views_py.html  z_fff39e3ca0aaeed4_0001_initial_py.html  z_fff39e3ca0aaeed4_0002_alter_user_options_remove_user_username_user_avatar_and_more_py.html  (+5 more)
lms/: admin.py  (+9 more)
(+28 files in other folders)
